# invenio-sip2

./: .editorconfig  .gitignore  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  CONTRIBUTING.rst  INSTALL.md  INSTALL.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: continuous-integration-test.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  examplesapp.rst  index.rst  installation.rst  license.rst  make.bat  usage.rst
examples/: app-setup.sh  app-teardown.sh  app.py
invenio_sip2/: __init__.py  api.py  api_views.py  cli.py  config.py  datastore.py  decorators.py  errors.py  ext.py  helpers.py  models.py  permissions.py  proxies.py  serializer.py  server.py  utils.py  version.py  views.py
invenio_sip2/actions/: __init__.py  actions.py  base.py
invenio_sip2/handlers/: __init__.py  api_handlers.py  base.py  utils.py
invenio_sip2/records/: __init__.py  record.py
invenio_sip2/storage/: __init__.py  datastore.py  redis.py
invenio_sip2/templates/invenio_sip2/: base.html  index.html  monitoring.html
invenio_sip2/translations/: messages.pot
invenio_sip2/translations/de/LC_MESSAGES/: messages.po
invenio_sip2/translations/en/LC_MESSAGES/: messages.po
invenio_sip2/translations/es/LC_MESSAGES/: messages.po
invenio_sip2/translations/fr/LC_MESSAGES/: messages.po
invenio_sip2/translations/it/LC_MESSAGES/: messages.po
invenio_sip2/translations/nl/LC_MESSAGES/: messages.po
invenio_sip2/views/: __init__.py  rest.py  views.py
tests/: __init__.py  conftest.py  test_actions.py  test_cli.py  test_datastore.py  test_examples_app.py  test_helpers.py  test_invenio_sip2.py  test_messages.py  test_messages_api.py  test_models.py  test_server.py  test_socket_server.py  test_utils.py  test_views.py  test_views_rest.py  utils.py
tests/fixtures/: __init__.py  messages.py  servers.py
