[project]
name = "invenio-sip2"
version = "0.6.25"
description = "Invenio module that add a SIP2 communication for library self-check service"
readme = "README.rst"
authors = [{name = "Laurent Dubois",email = "<laurent.dubois@uclouvain.be>"}]
license = "GNU Affero General Public License v3.0"
repository = "https://github.com/inveniosoftware-contrib/invenio-sip2"
documentation = "https://invenio-sip2.readthedocs.io"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.9.2, <3.13"

dependencies = [
    "invenio-base (>=2.0,<3.0)",
    "invenio-access (>=2.0.0,<5.0.0)",
    "invenio-i18n (>=2.0.0,<4.0.0)",
    "jsonpickle (>=1.2)",
    "psutil",
    "pycountry (>=19.7.15)",
    "python-dateutil",
    "Flask (>=2.2.0,<4.0)",
    "SQLAlchemy (>=1.4.0,<3.0)",
    "SQLAlchemy-Utils (>=0.33.1)"
]

[tool.poetry.group.dev.dependencies]
pytest-black-ng = ">=0.4.0"
pytest-invenio = ">=3.0.0,<4.0.0"
pydocstyle = ">=6.1.1"
autoflake = ">=1.3.1"
Sphinx = ">=4.5.0"
mock = ">=4.0.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.entry-points."invenio_base.apps"]
invenio_sip2 = "invenio_sip2:InvenioSIP2"

[project.entry-points."invenio_base.api_apps"]
invenio_sip2 = "invenio_sip2:InvenioSIP2"

[project.entry-points."invenio_base.blueprints"]
invenio_sip2 = "invenio_sip2.views.views:blueprint"

[project.entry-points."invenio_base.api_blueprints"]
invenio_sip2 = "invenio_sip2.views.rest:api_blueprint"

[project.entry-points."flask.commands"]
selfcheck = "invenio_sip2.cli:selfcheck"

[tool.isort]
profile = "black"

[tool.pytest]
addopts = "--color=yes --black --isort --pydocstyle --doctest-glob=\"*.rst\" --doctest-modules --cov=invenio_sip2 --cov-report=term-missing --ignore=docs/conf.py"
testpaths = "docs tests invenio_sip2"
