[project]
name = "invenio-sip2"
version = "0.6.26"
description = "Invenio module that add a SIP2 communication for library self-check service"
readme = "README.md"
authors = [{name = "Laurent Dubois", email = "laurent.dubois@uclouvain.be"}]
license = "AGPL-3.0-or-later"
requires-python = ">=3.9.2, <3.15"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "invenio-base>=2.0,<3.0",
    "invenio-access>=4.0.0,<6.0.0",
    "invenio-i18n>=2.0.0,<4.0.0",
    "jsonpickle>=1.2",
    "psutil",
    "pycountry>=19.7.15",
    "python-dateutil",
    "Flask>=2.2.0,<4.0",
    "poethepoet",
]

[dependency-groups]
dev = [
    "pytest-invenio>=3.0.0",
    "mock>=4.0.0",
    "ruff>=0.12.3",
    "pip-audit",
]

[project.entry-points."invenio_base.apps"]
invenio_sip2 = "invenio_sip2:InvenioSIP2"

[project.entry-points."invenio_base.api_apps"]
invenio_sip2 = "invenio_sip2:InvenioSIP2"

[project.entry-points."invenio_base.blueprints"]
invenio_sip2 = "invenio_sip2.views.views:blueprint"

[project.entry-points."invenio_base.api_blueprints"]
invenio_sip2 = "invenio_sip2.views.rest:api_blueprint"

[project.entry-points."flask.commands"]
selfcheck = "invenio_sip2.cli:selfcheck"

[tool.poe.tasks]
format = {cmd = "ruff format .", help = "Formats all files"}
lint = {cmd = "ruff check", help = "Checks linting"}
run_tests = {cmd = "./run-tests.sh", help = "Runs all tests"}
tests = {cmd = "pytest", help = "pytest"}
tests_debug = {cmd = "pytest -s -vv --no-cov", help = "pytest -s -vv --no-cov"}

[tool.pytest.ini_options]
addopts = "--color=yes --cov=invenio_sip2 --cov-report=term-missing"
testpaths = ["tests", "invenio_sip2"]

[tool.ruff]
extend-exclude = ["config.py", "conf.py"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
precision = 2

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = true
