[project]
name = "invenio-sip2"
version = "1.0.0"
description = "Invenio module that add a SIP2 communication for library self-check service"
readme = "README.md"
authors = [{name = "Laurent Dubois", email = "laurent.dubois@uclouvain.be"}]
license = "AGPL-3.0-or-later"
requires-python = ">=3.10, <3.15"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
]

dependencies = [
    "invenio-base>=2.0.0",
    "invenio-access>=4.0.0",
    "invenio-i18n>=2.0.0",
    "jsonpickle>=1.2",
    "psutil",
    "pycountry>=19.7.15",
    "python-dateutil",
    "Flask>=2.2.0",
    "poethepoet",
]

[dependency-groups]
dev = [
    "pytest-invenio>=3.0.0",
    "mock>=4.0.0",
    "ruff>=0.12.3",
    "pip-audit",
]

[project.entry-points."invenio_base.apps"]
invenio_sip2 = "invenio_sip2:InvenioSIP2"

[project.entry-points."invenio_base.api_apps"]
invenio_sip2 = "invenio_sip2:InvenioSIP2"

[project.entry-points."invenio_base.blueprints"]
invenio_sip2 = "invenio_sip2.views.views:blueprint"

[project.entry-points."invenio_base.api_blueprints"]
invenio_sip2 = "invenio_sip2.views.rest:api_blueprint"

[project.entry-points."flask.commands"]
selfcheck = "invenio_sip2.cli:selfcheck"

[tool.poe.tasks]
format = {cmd = "ruff format .", help = "Formats all files"}
lint = {cmd = "ruff check", help = "Checks linting"}
run_tests = {cmd = "./run-tests.sh", help = "Runs all tests"}
tests = {cmd = "pytest", help = "pytest"}
tests_debug = {cmd = "pytest -s -vv --no-cov", help = "pytest -s -vv --no-cov"}

[tool.pytest.ini_options]
addopts = "--color=yes --cov=invenio_sip2 --cov-report=term-missing"
testpaths = ["tests", "invenio_sip2"]

[tool.ruff]
extend-exclude = ["config.py", "conf.py"]

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "ANN",     # missing type annotations
    "COM812",  # managed by formatter
    # Docstring style preferences
    "D401",    # imperative mood — established style in this codebase
    # Logging format style — intentional choice
    "G001",    # logging str.format
    "G004",    # logging f-string
    # TODO formatting — too heavyweight for this project size
    "TD002",   # TODO author requirement
    "TD003",   # TODO issue link requirement
    "FIX002",  # TODO resolution requirement
    "ERA001",  # commented-out code
    # Exception handling — too pedantic
    "EM101",   # exception string literal
    "EM102",   # exception f-string literal
    "TRY003",  # long exception messages outside exception class
    # Boolean args — value object design pattern
    "FBT002",  # boolean default positional argument
    "FBT003",  # boolean positional value in function call
    # API design
    "C901",    # too complex (borderline 11 > 10)
    "PLR0913", # too many arguments — legitimate function signatures
    "PLR2004", # magic values — SIP2 protocol constants and HTTP codes
    "RET504",  # unnecessary assignment before return — preserves TODO intent
    # Security — intentional design decisions
    "S301",    # jsonpickle — intentional internal Redis store
    "S104",    # 0.0.0.0 — intentional SIP2 server binding
    # Naming — would be a breaking API change
    "N818",    # exception name without Error suffix
    # Import structure — circular import workaround in models.py
    "PLC0415", # import not at top-level
    # Unused arguments — pervasive interface/contract patterns throughout codebase
    "ARG002",  # unused method argument
    "ARG003",  # unused class method argument
    "ARG005",  # unused lambda argument
    "FURB171", # single-item container membership test
]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = [
    "INP001",  # not a package, standalone script
    "S106",    # hardcoded SECRET_KEY is intentional in examples
]
"tests/*.py" = [
    "S101",    # asserts allowed in tests
    "S106",    # hardcoded passwords allowed in tests
    "S602",    # subprocess shell=True allowed in tests
    "S607",    # partial executable path allowed in tests
    "ARG",     # unused arguments allowed in test fixtures
    "FBT",     # boolean positional args allowed in tests
    "INP001",  # pytest discovers tests without __init__.py
    "PLR2004", # magic values allowed in tests
    "PLR0915", # too many statements — test functions can be long
    "PLC0415", # imports not at top level allowed (fixtures)
    "PTH",     # os.path in tests is idiomatic and clear
    "PT",      # pytest style rules — test flexibility
    "T201",    # print allowed in tests
    "D400",    # docstring period — not enforced in tests
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
precision = 2

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = true
