# -*- coding: utf-8 -*-
#
# INVENIO-SIP2
# Copyright (C) 2020 UCLouvain
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, version 3 of the License.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program. If not, see <http://www.gnu.org/licenses/>.
[metadata]
name = invenio-sip2
version = attr: invenio_sip2.version.__version__
description = Invenio module that add SIP2 communication for self-check
long_description = file: README.rst, CHANGES.rst
keywords = invenio SIP2
license = AGPL
author = Laurent Dubois
author_email = laurent.dubois@uclouvain.be
url = https://github.com/inveniosoftware-contrib/invenio-sip2
platforms = any
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 3 - Alpha

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.7,<3.10
install_requires =
    cachelib>=0.1
    cryptography>=2.1.4
    Flask<2.0.0,>=1.1.4
    Flask-BabelEx>=0.9.4
    Flask-Security>=3.0.0
    Flask-Login>=0.4.0,<0.5.0
    email-validator>=1.0.5
    six>=1.12.0
    SQLAlchemy>=1.2.18,<1.4.0
    SQLAlchemy-Utils>=0.33.1,<0.36
    invenio-base>=1.2.3
    invenio-access>=1.3.1
    pycountry>=19.7.15
    jsonpickle>=1.2
    psutil>=5.8.0

[options.extras_require]
tests =
    mock>=2.0.0
    pytest-mock>=1.6.0
    invenio-app>=1.2.3
    invenio-db>=1.0.9
    autoflake>=1.3.1
    isort>=5.1.0
    pydocstyle>=5.0.0
    pytest-invenio>=1.4.0,<1.4.1
    invenio-db[postgresql,mysql,versioning]>=1.0.9,<2.0.0
    Sphinx==^4.5.0

[options.entry_points]
invenio_base.apps =
    invenio_sip2 = invenio_sip2:InvenioSIP2
invenio_base.api_apps =
    invenio_sip2 = invenio_sip2:InvenioSIP2
invenio_base.blueprints =
    invenio_sip2 = invenio_sip2.views.views:blueprint
invenio_base.api_blueprints =
    invenio_sip2 = invenio_sip2.views.rest:api_blueprint
flask.commands =
    selfcheck = invenio_sip2.cli:selfcheck
[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_sip2/translations/

[extract_messages]
copyright_holder = UCLouvain
msgid_bugs_address = laurent.dubois@uclouvain.be
mapping-file = babel.ini
output-file = invenio_sip2/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_sip2/translations/messages.pot
output-dir = invenio_sip2/translations/

[update_catalog]
input-file = invenio_sip2/translations/messages.pot
output-dir = invenio_sip2/translations/
